# rosbot

Arduino/motor_controller/: motor_controller.ino  motor_controller_v2.ino
mybot/: CMakeLists.txt  package.xml
mybot/config/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  rviz_slam.rviz
mybot/description/: mybot.urdf
mybot/launch/: mybot_bringup.launch  mybot_navigation.launch  mybot_slam.launch
mybot/map/: myroom1.yaml
mybot/src/: mybot_controller.cpp
